--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "postinstall": "tsc",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "15.8.0"
   },
   "eslintConfig": {
     "extends": [
