--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux": "^3.6.0",
     "axios": "^0.27.2",
     "dompurify": "^2.4.0",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/dompurify": "^2.3.4"
+    "@types/dompurify": "^2.3.4",
+    "@types/nprogress": "^0.2.0"
   }
 }
